Utworzono za pomocą Colab

--- a/praca_domowa6.ipynb
+++ b/praca_domowa6.ipynb
@@ -123,7 +123,7 @@
         "id": "riXsgF53_dk9"
       },
       "id": "riXsgF53_dk9",
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "id": "VdB6Jgt8-kr4"
       },
       "id": "VdB6Jgt8-kr4",
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         "id": "SK1fp56rCS9f"
       },
       "id": "SK1fp56rCS9f",
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -183,14 +183,14 @@
       ],
       "metadata": {
         "id": "2ocbVyLqBCEA",
-        "outputId": "61b01c77-8d7d-4628-a161-5099998e635d",
+        "outputId": "f77246d5-b182-47e6-dc07-06ceab72206c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
         }
       },
       "id": "2ocbVyLqBCEA",
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d991912c-e122-4f88-ab17-f2010ad8a0f0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8cd49af6-bab2-4943-a4bf-3ac33284effe\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -303,7 +303,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d991912c-e122-4f88-ab17-f2010ad8a0f0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8cd49af6-bab2-4943-a4bf-3ac33284effe')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -355,12 +355,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d991912c-e122-4f88-ab17-f2010ad8a0f0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-8cd49af6-bab2-4943-a4bf-3ac33284effe button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d991912c-e122-4f88-ab17-f2010ad8a0f0');\n",
+              "        const element = document.querySelector('#df-8cd49af6-bab2-4943-a4bf-3ac33284effe');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -380,8 +380,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-488fb577-f53f-477c-98e6-1d2fe88225ac\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-488fb577-f53f-477c-98e6-1d2fe88225ac')\"\n",
+              "<div id=\"df-3f848cd5-4a85-41fc-b89a-430f9318131e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3f848cd5-4a85-41fc-b89a-430f9318131e')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -500,7 +500,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-488fb577-f53f-477c-98e6-1d2fe88225ac button');\n",
+              "        document.querySelector('#df-3f848cd5-4a85-41fc-b89a-430f9318131e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -517,7 +517,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -592,7 +592,7 @@
         "id": "UlYyA5gVDkB2"
       },
       "id": "UlYyA5gVDkB2",
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -610,7 +610,7 @@
         "id": "kQRRljpegnMQ"
       },
       "id": "kQRRljpegnMQ",
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -644,7 +644,7 @@
         "id": "qIZTnhCxg3T4"
       },
       "id": "qIZTnhCxg3T4",
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -666,7 +666,7 @@
         "id": "E5bdZBR1jGqO"
       },
       "id": "E5bdZBR1jGqO",
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -693,7 +693,7 @@
         "id": "f9Gh-WcxhjfV"
       },
       "id": "f9Gh-WcxhjfV",
-      "execution_count": 22,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -748,7 +748,7 @@
         "id": "od65IICCjDc-"
       },
       "id": "od65IICCjDc-",
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
         "id": "-37Cz2HJiLLw"
       },
       "id": "-37Cz2HJiLLw",
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -782,36 +782,37 @@
         "id": "FKqmV1gzoF7a"
       },
       "id": "FKqmV1gzoF7a",
-      "execution_count": 27,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "gain_std = [0 for i in range(2, 7)]\n",
-        "gain_rmse = [0 for i in range(2, 7)]\n",
-        "for i in range(2, 7):\n",
+        "gain_std = [0 for i in range(1, 7)]\n",
+        "gain_rmse = [0 for i in range(1, 7)]\n",
+        "for i in range(1, 7):\n",
         "  tree = build_tree_rss_gain(X_train, y_train, max_depth=i)\n",
         "  y_pred = predict(X_test, tree)\n",
         "  print(\"RSS Gain Tree RMSE:\", mean_squared_error(y_test, y_pred)**(1/2))\n",
-        "  gain_rmse[i-2]= round(mean_squared_error(y_test, y_pred)**(1/2),0)\n",
-        "  gain_std[i-2]= round(np.var(y_pred)**(1/2),0)\n",
+        "  gain_rmse[i-1]= round(mean_squared_error(y_test, y_pred)**(1/2),0)\n",
+        "  gain_std[i-1]= round(np.var(y_pred)**(1/2),0)\n",
         "gain_rmse_std = pd.DataFrame([[gain_rmse[i],gain_std[i]] for i in range(5)])"
       ],
       "metadata": {
         "id": "R_4rfs2FiWaL",
-        "outputId": "6877c411-193b-4fd1-cbab-593a8aa18351",
+        "outputId": "55c100ec-4712-4dfd-eafa-bc027c4497e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "R_4rfs2FiWaL",
-      "execution_count": 29,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "RSS Gain Tree RMSE: 85046.91152603953\n",
             "RSS Gain Tree RMSE: 90007.93727184921\n",
             "RSS Gain Tree RMSE: 88323.24898773176\n",
             "RSS Gain Tree RMSE: 91730.77379103967\n",
@@ -856,7 +857,7 @@
         }
       },
       "id": "VQEc7lkUqFg_",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -874,49 +875,33 @@
     {
       "cell_type": "code",
       "source": [
-        "total_std = [0 for i in range(2, 5)]\n",
-        "total_rmse = [0 for i in range(2, 5)]\n",
-        "for i in range(2, 5):\n",
+        "total_std = [0 for i in range(1, 4)]\n",
+        "total_rmse = [0 for i in range(1, 4)]\n",
+        "for i in range(1, 4):\n",
         "  tree = build_tree_total_rss(X_train, y_train, max_depth=i)\n",
         "  y_pred = predict(X_test, tree)\n",
         "  print(\"RSS Gain Tree RMSE:\", mean_squared_error(y_test, y_pred)**(1/2))\n",
-        "  total_rmse[i-2]= round(mean_squared_error(y_test, y_pred)**(1/2),0)\n",
-        "  total_std[i-2]= round(np.var(y_pred)**(1/2),0)"
+        "  total_rmse[i-1]= round(mean_squared_error(y_test, y_pred)**(1/2),0)\n",
+        "  total_std[i-1]= round(np.var(y_pred)**(1/2),0)"
       ],
       "metadata": {
         "collapsed": true,
         "id": "cPiWs3Q0I3vs",
-        "outputId": "ffc661af-8b0a-4f5a-9f66-ea20a78a0324",
+        "outputId": "bac7f394-bc9d-41c4-88f7-cadfb229e251",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 654
+          "base_uri": "https://localhost:8080/"
         }
       },
       "id": "cPiWs3Q0I3vs",
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "RSS Gain Tree RMSE: 77532.71410518058\n",
             "RSS Gain Tree RMSE: 89152.81705235163\n",
             "RSS Gain Tree RMSE: 84163.69379770114\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-188845cfa454>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtotal_rmse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mtree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"RSS Gain Tree RMSE:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_squared_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-10-27f544175462>\u001b[0m in \u001b[0;36mbuild_tree_total_rss\u001b[0;34m(X, y, max_depth, depth)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;31m# Build subtrees recursively\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0mleft_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m             \u001b[0mright_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-10-27f544175462>\u001b[0m in \u001b[0;36mbuild_tree_total_rss\u001b[0;34m(X, y, max_depth, depth)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;31m# Build subtrees recursively\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0mleft_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m             \u001b[0mright_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-10-27f544175462>\u001b[0m in \u001b[0;36mbuild_tree_total_rss\u001b[0;34m(X, y, max_depth, depth)\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;31m# Build subtrees recursively\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0mleft_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m             \u001b[0mright_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0;31m# Compute total RSS of whole tree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-10-27f544175462>\u001b[0m in \u001b[0;36mbuild_tree_total_rss\u001b[0;34m(X, y, max_depth, depth)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;31m# Build subtrees recursively\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0mleft_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_left\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m             \u001b[0mright_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_right\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-10-27f544175462>\u001b[0m in \u001b[0;36mbuild_tree_total_rss\u001b[0;34m(X, y, max_depth, depth)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mTreeNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mbest_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
