Utworzono za pomocą Colab

--- a/praca_domowa6.ipynb
+++ b/praca_domowa6.ipynb
@@ -637,14 +637,14 @@
         "              best_rss = rss_gain\n",
         "              best_feature = feature_idx\n",
         "              best_value = val\n",
-        "\n",
+        "    print(best_feature, best_value)\n",
         "    return best_feature, best_value, best_rss"
       ],
       "metadata": {
         "id": "qIZTnhCxg3T4"
       },
       "id": "qIZTnhCxg3T4",
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -802,23 +802,111 @@
       ],
       "metadata": {
         "id": "R_4rfs2FiWaL",
-        "outputId": "1880b88d-1e79-42cc-8a2e-1bc57f8b9ebf",
+        "outputId": "789459c4-2a51-44dc-be1f-369549a92cd5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "R_4rfs2FiWaL",
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "2 44.5\n",
             "RSS Gain Tree RMSE: 85046.91152603953\n",
+            "2 44.5\n",
+            "0 29.5\n",
+            "3 2.5\n",
             "RSS Gain Tree RMSE: 90007.93727184921\n",
+            "2 44.5\n",
+            "0 29.5\n",
+            "0 24.5\n",
+            "2 40.5\n",
+            "3 2.5\n",
+            "0 45.5\n",
+            "0 51.5\n",
             "RSS Gain Tree RMSE: 88323.24898773176\n",
+            "2 44.5\n",
+            "0 29.5\n",
+            "0 24.5\n",
+            "None None\n",
+            "None None\n",
+            "2 40.5\n",
+            "0 41.5\n",
+            "0 45.5\n",
+            "3 2.5\n",
+            "0 45.5\n",
+            "1 69312.0\n",
+            "1 54440.0\n",
+            "0 51.5\n",
+            "0 42.5\n",
+            "0 63.5\n",
             "RSS Gain Tree RMSE: 91730.77379103967\n",
+            "2 44.5\n",
+            "0 29.5\n",
+            "0 24.5\n",
+            "None None\n",
+            "None None\n",
+            "2 40.5\n",
+            "0 41.5\n",
+            "1 59357.5\n",
+            "0 53.5\n",
+            "0 45.5\n",
+            "None None\n",
+            "None None\n",
+            "3 2.5\n",
+            "0 45.5\n",
+            "1 69312.0\n",
+            "0 25.0\n",
+            "None None\n",
+            "1 54440.0\n",
+            "None None\n",
+            "0 56.5\n",
+            "0 51.5\n",
+            "0 42.5\n",
+            "None None\n",
+            "None None\n",
+            "0 63.5\n",
+            "None None\n",
+            "None None\n",
             "RSS Gain Tree RMSE: 92751.61146503937\n",
+            "2 44.5\n",
+            "0 29.5\n",
+            "0 24.5\n",
+            "None None\n",
+            "None None\n",
+            "2 40.5\n",
+            "0 41.5\n",
+            "1 59357.5\n",
+            "0 35.0\n",
+            "None None\n",
+            "0 53.5\n",
+            "None None\n",
+            "None None\n",
+            "0 45.5\n",
+            "None None\n",
+            "None None\n",
+            "3 2.5\n",
+            "0 45.5\n",
+            "1 69312.0\n",
+            "0 25.0\n",
+            "None None\n",
+            "0 36.0\n",
+            "None None\n",
+            "1 54440.0\n",
+            "None None\n",
+            "0 56.5\n",
+            "None None\n",
+            "None None\n",
+            "0 51.5\n",
+            "0 42.5\n",
+            "None None\n",
+            "None None\n",
+            "0 63.5\n",
+            "None None\n",
+            "None None\n",
             "RSS Gain Tree RMSE: 91863.46123893681\n"
           ]
         }
@@ -897,7 +985,7 @@
         }
       },
       "id": "cPiWs3Q0I3vs",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,36 +1001,96 @@
     {
       "cell_type": "code",
       "source": [
-        "y_gain, y_total"
+        "y_gain[-5], y_total[-5]\n",
+        "df.iloc[-5, :]"
       ],
       "metadata": {
         "id": "VQqC0j3kBRBH",
-        "outputId": "65505866-a2df-48e6-ea05-adad8a7cda2d",
+        "outputId": "5f4d3f00-c01b-4dda-9de8-85798c5aa831",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 335
         }
       },
       "id": "VQqC0j3kBRBH",
-      "execution_count": 25,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(array([240621.06407008, 240621.06407008, 240621.06407008, 400129.77099071,\n",
-              "        400129.77099071, 240621.06407008, 400129.77099071, 400129.77099071,\n",
-              "        400129.77099071, 400129.77099071, 400129.77099071, 400129.77099071,\n",
-              "        400129.77099071, 400129.77099071, 400129.77099071, 240621.06407008,\n",
-              "        400129.77099071, 400129.77099071, 240621.06407008, 400129.77099071]),\n",
-              " array([240621.06407008, 240621.06407008, 240621.06407008, 400129.77099071,\n",
-              "        400129.77099071, 240621.06407008, 400129.77099071, 400129.77099071,\n",
-              "        400129.77099071, 400129.77099071, 400129.77099071, 400129.77099071,\n",
-              "        400129.77099071, 400129.77099071, 400129.77099071, 400129.77099071,\n",
-              "        400129.77099071, 400129.77099071, 240621.06407008, 400129.77099071]))"
+              "Age                             44\n",
+              "Income                       59087\n",
+              "HouseSize                       61\n",
+              "NrOfHouses                     1.0\n",
+              "location_rural               False\n",
+              "location_suburban             True\n",
+              "location_urban               False\n",
+              "price                409770.398214\n",
+              "Name: 45, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>45</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Age</th>\n",
+              "      <td>44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Income</th>\n",
+              "      <td>59087</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HouseSize</th>\n",
+              "      <td>61</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>NrOfHouses</th>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>location_rural</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>location_suburban</th>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>location_urban</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>price</th>\n",
+              "      <td>409770.398214</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 30
         }
       ]
     },
