--- a/praca_domowa6.ipynb
+++ b/praca_domowa6.ipynb
@@ -123,7 +123,7 @@
         "id": "riXsgF53_dk9"
       },
       "id": "riXsgF53_dk9",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "id": "VdB6Jgt8-kr4"
       },
       "id": "VdB6Jgt8-kr4",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         "id": "SK1fp56rCS9f"
       },
       "id": "SK1fp56rCS9f",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
         }
       },
       "id": "2ocbVyLqBCEA",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
         "id": "UlYyA5gVDkB2"
       },
       "id": "UlYyA5gVDkB2",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +553,7 @@
         "id": "kQRRljpegnMQ"
       },
       "id": "kQRRljpegnMQ",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +587,7 @@
         "id": "qIZTnhCxg3T4"
       },
       "id": "qIZTnhCxg3T4",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -621,7 +621,7 @@
         "id": "JiHzGHQNF4nY"
       },
       "id": "JiHzGHQNF4nY",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -644,7 +644,7 @@
         "id": "E5bdZBR1jGqO"
       },
       "id": "E5bdZBR1jGqO",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -672,7 +672,7 @@
         "id": "f9Gh-WcxhjfV"
       },
       "id": "f9Gh-WcxhjfV",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
         "id": "VXC1b47XGQ9Z"
       },
       "id": "VXC1b47XGQ9Z",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -754,7 +754,7 @@
         "id": "od65IICCjDc-"
       },
       "id": "od65IICCjDc-",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -775,7 +775,7 @@
         "id": "-37Cz2HJiLLw"
       },
       "id": "-37Cz2HJiLLw",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -788,7 +788,7 @@
         "id": "FKqmV1gzoF7a"
       },
       "id": "FKqmV1gzoF7a",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -814,7 +814,7 @@
         }
       },
       "id": "R_4rfs2FiWaL",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +853,7 @@
         }
       },
       "id": "E0m42CxNGdhy",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +892,7 @@
         }
       },
       "id": "VQEc7lkUqFg_",
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,7 +931,7 @@
         }
       },
       "id": "cPiWs3Q0I3vs",
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,7 +964,7 @@
         }
       },
       "id": "O_Caqd1eke5s",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1375,7 +1375,7 @@
         }
       },
       "id": "QKdFvreAN2RU",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1730,7 +1730,7 @@
         }
       },
       "id": "DFBgqLTUNDwH",
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1761,7 +1761,7 @@
       "source": [
         "Compare local RSS minimization, RSS gain maximization, and total RSS minimization.\n",
         "\n",
-        "Jedną z głownych różnic między tymi metodami jest skłonność do przeuczania się modelu local rss ze względu na rozważanie jedynie najlepszego podziału na danym etapie nie zważając czy da to dobre rezultaty przy rozroście drzewa i ucząc się specyfiki danych treningowych niekoniecznie istotnych prawdziwych dla zbioru testowego. Dlatego strategia ta może dawać podobne wyniki dla niewielkic drzew, ale wraz ze wzrostem drzewa metoda total rss okazuje się lepsza. Jednak ze względu na wydajność i dobre metody zapobiegające przeuczeniu (tj. przycinanie drzew) to local rss jest częściej używana."
+        "Jedną z głównych różnic między tymi metodami jest skłonność do przeuczania się modelu local rss ze względu na rozważanie jedynie najlepszego podziału na danym etapie nie zważając czy da to dobre rezultaty przy rozroście drzewa i ucząc się specyfiki danych treningowych niekoniecznie istotnych prawdziwych dla zbioru testowego. Dlatego strategia ta może dawać podobne wyniki dla niewielkic drzew, ale wraz ze wzrostem drzewa metoda total rss okazuje się lepsza. Jednak ze względu na wydajność i dobre metody zapobiegające przeuczeniu (tj. przycinanie drzew) to local rss jest częściej używana."
       ],
       "metadata": {
         "id": "_yI7BwzIRUAr"
