Utworzono za pomocą Colab

--- a/praca_domowa_7.ipynb
+++ b/praca_domowa_7.ipynb
@@ -125,6 +125,54 @@
         "id": "L9VT1gISt5ZU"
       },
       "id": "L9VT1gISt5ZU"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Zauważmy najpierw, że będziemy minimalizować funkcję postaci:\n",
+        "$\\sum_{i=1}^n L(y_i, \\lambda) = -m \\log(\\sigma(\\lambda)) - k \\log(1 - \\sigma(\\lambda))$.\n",
+        "Przyda się nam obserwacja iż $ \\frac{d}{d\\lambda}\\sigma(\\lambda)= \\sigma(\\lambda)\\cdot (1-\\sigma(\\lambda))$.\n",
+        "\n",
+        "Oznaczmy dla uproszczenia $s = \\sigma(\\lambda)$, mamy ze standardowych wzorów i obserwacji:\n",
+        "$0 = \\frac{d}{d\\lambda} \\left( -m \\log(s) - k \\log(1 - s) \\right)\n",
+        "= -m \\cdot \\frac{1}{s} \\cdot s' + (-k) \\cdot \\frac{1}{1 - s} \\cdot -s'=-m  \\cdot (1-s) + k \\cdot s $. Zatem:\n",
+        "$(m+k)\\cdot s = m$ i kolejno:\n",
+        "\n",
+        "$\\frac{1}{s} = \\frac{m+k}{m}$,\n",
+        "\n",
+        "$ e^{-\\lambda}= \\frac{n-m}{m} $,\n",
+        "\n",
+        "$\\lambda = -\\log(\\frac{k}{m})= \\log(\\frac{m}{k})$,\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "V8OcJtLuG4DL"
+      },
+      "id": "V8OcJtLuG4DL"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Niech $s_i = f_i+λ$. Tym razem minimalizujemy: $\\sum_{i=1}^n L(y_i, s_i) =\\sum_{i=1}^n -y_i \\log(\\sigma(s_i)) - (1 - y_i) \\log(1 - \\sigma(s_i))$. Nadal zachodzi obserwacja z wcześniej gdyż $f_i$ to stały predyktor. Skoro $\\frac{d}{d\\lambda} L(y_i, f_i + \\lambda)= -y_i\\cdot (1-σ(s_i))+(1-y_i)σ(s_i)= -y_i+σ(s_i)$, zatem:\n",
+        "$\\sum_{i=1}^n \\frac{d}{d\\lambda} L(y_i, f_i + \\lambda) = \\sum_{i=1}^n \\left[ \\sigma(f_i + \\lambda) - y_i \\right]$. Skąd dostaniemy warunek na minimum lokalne $\\sum_{i=1}^n σ(s_i) = \\sum_{i=1}^n y_i$\n",
+        "Tej postaci nie da się już uprościć ze względu na nieliniowość funkcji sigmoid."
+      ],
+      "metadata": {
+        "id": "DuLljAovTIMF"
+      },
+      "id": "DuLljAovTIMF"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oNFdhwjNG1Wj"
+      },
+      "id": "oNFdhwjNG1Wj",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
