--- a/praca_domowa_7.ipynb
+++ b/praca_domowa_7.ipynb
@@ -166,13 +166,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "import matplotlib.pyplot as plt\n",
+        "m=40\n",
+        "k=60\n",
+        "n=m+k\n",
+        "preds=random.normal(size=100)"
+      ],
       "metadata": {
-        "id": "oNFdhwjNG1Wj"
+        "id": "oNFdhwjNG1Wj",
+        "outputId": "b436472b-a102-45c5-a1fd-e5d0490d8ec0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        }
       },
       "id": "oNFdhwjNG1Wj",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "module 'random' has no attribute 'normal'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-cca239e7f521>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mpreds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'random' has no attribute 'normal'"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
