Utworzono za pomocą Colab

--- a/praca_domowa_7.ipynb
+++ b/praca_domowa_7.ipynb
@@ -188,7 +188,7 @@
         }
       },
       "id": "oNFdhwjNG1Wj",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -208,7 +208,7 @@
         "\n",
         "losses_b= [0]* len(lambdas)\n",
         "for i in range(len(lambdas)):\n",
-        "    loss_b_lam= [-m*np.log(1/(1+np.exp(-lambdas[i]-pred)))-k*np.log(1-1/(1+np.exp(-lambdas[i]-pred))) for pred in preds]\n",
+        "    loss_b_lam= [*np.log(1/(1+np.exp(-lambdas[i]-pred)))-*np.log(1-1/(1+np.exp(-lambdas[i]-pred))) for pred in preds]\n",
         "    losses_b[i] = sum(loss_b_lam)\n",
         "plt.plot(lambdas, losses_b)\n",
         "plt.show()"
@@ -222,7 +222,7 @@
         }
       },
       "id": "pLUs6OCyKJpQ",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
